--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "karma start --single-run --browsers Firefox karma.conf.js"
   },
+  "repository" : { 
+   "type" : "git",
+   "url" : "https://github.com/petergd/pd-bubble.git"
+  },
   "keywords": [
     "toasts",
     "notifications",
