--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "email" : "pdarmis@gmail.com"
   },
   "files": [
-	"node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js",
-	"fonts/*",
-	"pd-bubble.js",
-	"index.html"
+    "node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js",
+    "tests/test.html",
+    "test-utils.js",
+    "tests/pd-bubble.test.js",
+    "fonts/*",
+    "pd-bubble.js",
+    "pd-bubble.html"
   ],
   "author": "Peter Darmis",
   "license": "MIT",
