--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pd-bubble",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Custom Web Element used as a notifications container that delivers messages to the user.",
   "main": "pd-bubble.js",
   "scripts": {
@@ -33,6 +33,7 @@
   "author": "Peter Darmis",
   "license": "MIT",
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^2.4.1"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.4.0",
